# opti-bridge

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  HUONG_DAN_TIENG_VIET.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  blueprint.md  dev-fe.sh  fix_webkit.sh  generate_icons.py  index.html  package-lock.json  package.json  setup.sh  start-dev.sh  tailwind.config.js  vite.config.ts
.cursor/rules/: ui-and-styling-rule.mdc
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  models.rs  state.rs
src-tauri/src/commands/: config_cmds.rs  history_cmds.rs  image_cmds.rs  mod.rs  upload_cmds.rs
src-tauri/src/modules/: config_manager.rs  database.rs  image_processor.rs  mod.rs
src-tauri/src/uploaders/: cloudinary.rs  mod.rs  r2.rs
src/components/common/: Button.tsx  Toast.tsx  Toaster.tsx
src/components/features/: GreetTest.tsx
src/hooks/: useToast.tsx
src/lib/: tauri.ts
src/pages/: HistoryView.tsx  SettingsView.tsx  UploadView.tsx
src/state/: appStore.ts
src/styles/: globals.css
