[package]
name = "opti-bridge"
version = "1.0.0"
description = "High-performance desktop image uploader for technical bloggers"
authors = ["OptiBridge Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["fs-read-file", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["multipart", "json"] }
image = { version = "0.24", features = ["webp"] }
arboard = "3.3"
rusqlite = { version = "0.30", features = ["bundled"] }
aws-config = "1.1"
aws-sdk-s3 = "1.12"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }
base64 = "0.21"
sha1 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

